--- a/css.css
+++ b/css.css
@@ -157,4 +157,4 @@ display:flex;
 img{width: 42px;
     height: 42px;
     }
-    .active{text-decoration: none; color: black;}
+/*     .active{text-decoration: none; color: black;} */
